--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
@@ -122,10 +122,10 @@
             </objects>
             <point key="canvasLocation" x="450" y="39"/>
         </scene>
-        <!--View Controller-->
+        <!--Ability Detail View Controller-->
         <scene sceneID="W4W-Ga-Enp">
             <objects>
-                <viewController id="hZw-Nn-U4y" sceneMemberID="viewController">
+                <viewController id="hZw-Nn-U4y" customClass="AbilityDetailViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9as-dU-2cA">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -183,7 +183,7 @@
                                         <connections>
                                             <outlet property="cellImageView" destination="9lo-88-4fJ" id="Sdb-MF-J6x"/>
                                             <outlet property="cellTitleLabel" destination="Qxk-qe-maq" id="5o1-aU-7zX"/>
-                                            <segue destination="hZw-Nn-U4y" kind="push" id="Gea-Tn-H1s"/>
+                                            <segue destination="hZw-Nn-U4y" kind="push" identifier="AbilityDetail" id="Gea-Tn-H1s"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -344,6 +344,9 @@
                 <relationship kind="outlet" name="cellImageView" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="cellTitleLabel" candidateClass="UILabel"/>
             </relationships>
+        </class>
+        <class className="AbilityDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AbilityDetailViewController.h"/>
         </class>
         <class className="BuildsViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildsViewController.h"/>
